<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>com.harbortek.helm</groupId>
		<artifactId>helm</artifactId>
		<version>0.1.0-SNAPSHOT</version>
	</parent>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <modelVersion>4.0.0</modelVersion>
	<artifactId>helm-tracker</artifactId>
	<dependencies>
		<dependency>
			<groupId>com.harbortek.helm</groupId>
			<artifactId>helm-platform</artifactId>
			<version>0.1.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<artifactId>mysql-connector-j</artifactId>
					<groupId>com.mysql</groupId>
				</exclusion>
			</exclusions>
		</dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>
        <dependency>
            <groupId>com.harbortek.helm</groupId>
            <artifactId>helm-pipeline</artifactId>
            <version>0.1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.18.1</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

</project>
